fix: changed units of fonts sizes, improved readability of img section, renamed classes

--- a/src/scss/daysection.scss
+++ b/src/scss/daysection.scss
@@ -1,4 +1,4 @@
-.day{
+.day_section{
     height: 60%;
 
     #day{
@@ -38,7 +38,7 @@
         #date{
             grid-column: 3/8;
             grid-row: 1/2;
-            font-size: 4vw;
+            font-size: 4rem;
             text-align: center;
             align-self: center;
         }
@@ -53,7 +53,7 @@
         #rain{
             grid-column: 7/8;
             grid-row: 2/3;
-            font-size: 3vw;
+            font-size: 3rem;
             text-align: center;
             align-self: center;
         }
@@ -61,7 +61,7 @@
         #wind{
             grid-column: 7/8;
             grid-row: 3/4;
-            font-size: 3vw;
+            font-size: 3rem;
             text-align: center;
             align-self: center;
         }
