--- a/src/scss/weeksection.scss
+++ b/src/scss/weeksection.scss
@@ -1,4 +1,4 @@
-.week{
+.week_section{
     height: 30%;
 
     #week{
